--- a/src/components/registration/signUp.css
+++ b/src/components/registration/signUp.css
@@ -6,6 +6,7 @@
 	background: rgba(0, 0, 0, 0.8);
 	margin-top: -50px;
 	border-radius: 8px;
+	box-shadow: 1px 1px 1px rgb(58, 57, 57), -1px -1px 1px rgb(58, 57, 57);
 }
 
 .signup > form {
@@ -52,4 +53,15 @@
 .signup__link:hover {
 	text-decoration: underline;
 	cursor: pointer;
+}
+
+.signup__error {
+	margin-top: -10px;
+	color: red;
+	text-align: left;
+	margin-bottom: 10px;
+	padding: 10px 10px;
+	background: rgba(255, 0, 0, 0.2);
+	border-radius: 5px;
+	border: 1px solid red;
 }
