--- a/src/components/homeScreen/nav.css
+++ b/src/components/homeScreen/nav.css
@@ -1,36 +1,48 @@
 .nav {
-	position: fixed;
+	position: fixed;  
+	background-color: rgba(22, 22, 22, 0.11); /* ✅ semi-transparent black */
 	top: 0;
 	right: 0;
 	padding: 20px;
 	width: 100%;
-	height: 30px;
-	z-index: 1;
+	height: 15px;
+	z-index: 100;
 	/* transition-timing-function: ease-in; */
-	transition: all 0.6s ease-in;
-}
-.nav__black {
-	background-color: rgba(0, 0, 0, 0.7);
+	transition: all 0.5s ease-in;
+	transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .nav__contents {
 	display: flex;
 	justify-content: space-between;
+  align-items: center;
 }
 
 .nav__logo {
-	position: fixed;
-	left: 0;
-	width: 80px;
-	object-fit: contain;
-	padding-left: 20px;
-	padding-top: -150px;
-	cursor: pointer;
+  position: fixed;
+  top: 21px;       /* ✅ controls vertical spacing */
+  left: 40px;
+  width: 85px;
+  object-fit: contain;
+  cursor: pointer;
 }
 
+
+
 .nav__avatar {
-	cursor: pointer;
 	position: fixed;
-	right: 20px;
+	top: 17px; 
+	right: 40px;
 	width: 30px;
+	object-fit: contain;
+	cursor: pointer;
+	border-radius: 4px;
+}
+
+.nav--black {
+  background-color: #000000;
+}
+
+.nav--hide {
+  transform: translateY(-100%);
 }
