--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-* {
-	margin: 0;
-	padding: 0;
-	scroll-behavior: smooth;
+body {
+  background-color: #111;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
