major modification. delete login and signup  logic

--- a/src/components/homeScreen/nav.css
+++ b/src/components/homeScreen/nav.css
@@ -12,6 +12,8 @@
 	transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
+
+
 .nav__contents {
 	display: flex;
 	justify-content: space-between;
@@ -39,10 +41,12 @@
 	border-radius: 4px;
 }
 
-.nav--black {
-  background-color: #000000;
-}
 
+
+.nav__black {
+  background-color: #111;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
 .nav--hide {
   transform: translateY(-100%);
 }
